--- a/sales-management-services-client/pom.xml
+++ b/sales-management-services-client/pom.xml
@@ -2,20 +2,14 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>sales-management-project</artifactId>
+	<artifactId>sales-management-services-client</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>pom</packaging>
+	<packaging>war</packaging>
 
 	<parent>
 		<groupId>com.icodeuplay</groupId>
-		<artifactId>master-project</artifactId>
+		<artifactId>sales-management-project</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-
-	<modules>
-		<module>sales-management-app</module>
-		<module>sales-management-services</module>
-		<module>sales-management-services-client</module>
-	</modules>
 
 </project>
