--- a/sales-management-app/pom.xml
+++ b/sales-management-app/pom.xml
@@ -15,6 +15,12 @@
 
 		<dependency>
 			<groupId>com.icodeuplay</groupId>
+			<artifactId>sales-management-services-client</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.icodeuplay</groupId>
 			<artifactId>base-view-javafx</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
